--- a/perfil/templates/home.html
+++ b/perfil/templates/home.html
@@ -1,5 +1,14 @@
 {% extends 'bases/base.html' %}
 
+{% load static %}
+
+{% block 'head' %}
+    <link rel="stylesheet" href="{% static 'perfil/css/home.css' %}">
+    
+{% endblock  %}
+
+
+
 {% block 'body' %}
     <div class="container">
         <br>
@@ -13,7 +22,7 @@
                                 <span  class="fonte-destaque">R$ 1.000,00</span>
                             </div>
                             <div class="col-md">
-                                <img class="icone-setas" src="#">
+                                <img class="icone-setas" src="{% static 'perfil/img/entradas.png' %}">
                             </div>
                         </div>
         
@@ -28,7 +37,7 @@
                                 <span  class="fonte-destaque">R$ 1.000,00</span>
                             </div>
                             <div class="col-md">
-                                <img class="icone-setas" src="#">
+                                <img class="icone-setas" src="{% static 'perfil/img/saidas.png' %}">
                             </div>
                         </div> 
                     </div>
