--- a/perfil/templates/gerenciar.html
+++ b/perfil/templates/gerenciar.html
@@ -14,26 +14,30 @@
     <br>
     <div class="container">
         <div class="row">
+            {% if messages %}
+                {% for message in messages %}
+                     <div class="alert {{ message.tags }}">{{ message }}</div>
+                {% endfor %}
+            {% endif %}
             <div class="col-md-5">
                 <p class="fonte-destaque">Suas contas</p>
                 <hr>
 
                 <div class="contas">
 
-                    
+                    {% for conta in contas %}
                         <div class="lista-contas-main">
-                            <span><img width="10%" src="#">&nbsp&nbspNubank</span>
-
-                            <span class="total-conta positivo ">R$ 1.800,00&nbsp&nbsp&nbsp <a href="#"><img src="{% static 'perfil/img/exit.png' %}"></a></span>
+                            <span><img width="10%" src="{{conta.icone.url}}">&nbsp&nbsp{{conta.apelido}}</span>                            
+                            <span class="total-conta positivo ">{{conta.valor}}&nbsp&nbsp&nbsp <a href="/perfil/deletar_banco/{{conta.id}}"><img src="{% static 'perfil/img/exit.png' %}"></a></span>
                         </div>
                         <br>
-                    
+                    {% endfor %}
                     
                 </div>
 
                 <hr>
                 <span class="fonte-destaque">Total:</span>
-                <span class="positivo total-conta font-destaque">R$ 1.800,00</span>
+                <span class="positivo total-conta font-destaque">R$ {{total_conta}}</span>
             </div>
 
             <div class="col-md-2"></div>
@@ -41,25 +45,31 @@
             <div class="col-md-5">
                 <p class="fonte-destaque">Nova conta</p>
                 
-                <form action="{% url 'cadastrar_banco' %}" method="POST"> {% csrf_token %}
+                <form action="{% url 'cadastrar_banco' %}" method="POST" enctype="multipart/form-data"> {% csrf_token %}
                     <label>Apelido</label>
                     <input type="text" name="apelido" class="form-control" placeholder="">
                     <br>
                     <label>Banco</label>
                     <select name="banco" class="form-select">
                         <option value="NU">Nubank</option>
+                        <option value="CE">Caixa Econômica</option>
+                        <option value="ITU">Itaú Unibanco</option>
+                        <option value="C6">C6 Bank</option>
+                        <option value="INT">Banco Inter</option>
+                        <option value="BR">Bradesco</option>
+                        <option value="BB">Banco do Brasil</option>
                     </select>
                     <br>
                     <label>Tipo</label>
                     <select name="tipo" class="form-select">
-                        <option value="pf">Pessoa física</option>
-                        <option value="pj">Pessoa jurídica</option>
+                        <option value="PF">Pessoa Física</option>
+                        <option value="PJ">Pessoa Jurídica</option>
                     </select>
                     <br>
                     <label>Valor</label>
-                    <input type="number" name="valor" class="form-control" placeholder="">
+                    <input type="number" name="valor" class="form-control" placeholder="" >
                     <br>
-                    <input type="file" placeholder="Ícone" name="icone">
+                    <input type="file" placeholder="Ícone" name="icone" required>
                     <br>
                     <br>
                     <input style="width: 100%" type="submit" class="botao-principal" value="Enviar">
