--- a/extrato/templates/view_extrato.html
+++ b/extrato/templates/view_extrato.html
@@ -12,7 +12,7 @@
     <br>
     <br>
     <div class='container'>
-        <form action="{% url 'view_extrato' %}" method="GET">
+        <form action="{% url 'view_extrato' %}" method="GET">{% csrf_token %}
         <div class="row">
             
             <div class="col-md">
@@ -52,6 +52,15 @@
             <div class="col-md-2">
                 <a href="" class="botao-secundario">Exportar extrato</a>
             </div>
+            <div class="col-md-2">
+            </div>
+            <div class="col-md-2">
+            </div>
+            <div class="col-md-2">
+            </div>
+            <div class="col-md-2">
+                <a href="{% url 'view_extrato' %}" class="botao-secundario">Limpar Filtros</a>
+            </div>
         </div>
         <br>
         <br>
@@ -65,7 +74,7 @@
                         <th>Categoria</th>
                         <th>Data</th>
                         <th>Tipo</th>
-                        <th>valor</th>
+                        <th>Valor</th>
                         
                     </tr>
                     {% for valor in valores %}
