--- a/extrato/templates/partials/extrato.html
+++ b/extrato/templates/partials/extrato.html
@@ -8,7 +8,7 @@
             <th>Categoria</th>
             <th>Data</th>
             <th>Tipo</th>
-            <th>valor</th>
+            <th>Valor</th>
             
         </tr>
         {% for valor in valores %}
