--- a/planejamento/templates/definir_planejamento.html
+++ b/planejamento/templates/definir_planejamento.html
@@ -26,8 +26,8 @@
                 {% for categoria in categorias %}
                     <tr class="linha">
                         <td>{{categoria}}</td>
-                        <td><input type="number" class="form-control" value="{{categoria.valor_planejamento}}"></td>
-                        <td><button style="width: 100%;" class="botao-secundario">Salvar</button></td>         
+                        <td><input type="number" id="valor-categoria-{{categoria.id}}" class="form-control" value="{{categoria.valor_planejamento("{{categoria.id}}")}}"></td>
+                        <td><button onclick="update_valor_planejamento_categoria({{categoria.id}})" style="width: 100%;" class="botao-secundario">Salvar</button></td>         
                     </tr>
                 {% endfor %}
                 
@@ -38,6 +38,31 @@
         </div>
     </div>
 
+    <script>
+
+        function update_valor_planejamento_categoria(id){
+            valor = document.getElementById('valor-categoria-'+id).value
+            console.log(valor)
+
+             fetch("/planejamento/update_valor_categoria/"+id, {
+                method: 'POST',
+                headers: {
+                    "Content-Type": "application/json",
+                    
+                },
+                body: JSON.stringify({novo_valor: valor})
+                
+            }).then(function(result){
+                return result.json()
+
+            }).then(function(data){
+                console.log(data)
+
+            })
+
+        }
+
+    </script>
 
 
 
