--- a/perfil/templates/gerenciar.html
+++ b/perfil/templates/gerenciar.html
@@ -105,8 +105,10 @@
 
                     {% for categoria in categorias %}
                         <div class="lista-contas-main">
-                            <span>{{categoria}}</span>
-                            <span class="total-conta"><a href="{% url 'update_categoria' categoria.id %}"><img src="{% if categoria.essencial %}{% static 'perfil/img/check.png' %}{% else %}{% static 'perfil/img/exit.png' %}{% endif %}"></a></span>
+                            <span>{{categoria}}</span>                      
+                            <span class="imagem-pequena"><a href="{% url 'update_categoria' categoria.id %}"><img src="{% if categoria.essencial %}{% static 'perfil/img/check.png' %}{% else %}{% static 'perfil/img/exit.png' %}{% endif %}"></a></span>
+                            {% comment %} <span class="imagem-span"><img src="{{ imagem_url }}" alt="Imagem" class="imagem-pequena"></span> {% endcomment %}
+                              
                         </div>
                         <br>
                     {% endfor %}
