--- a/perfil/templates/home.html
+++ b/perfil/templates/home.html
@@ -113,7 +113,7 @@
                         <span class="fonte-destaque">Planejamento</span>
                     </div>
                     <hr class="hr-borda">
-                    <a href="#" class="botao-principal">Definir planejamento</a>
+                    <a href="{% url 'definir_planejamento' %}" class="botao-principal">Definir planejamento</a>
                 </div>
             </div>
             <div class="col-md-8">
