--- a/contas/templates/definir_contas.html
+++ b/contas/templates/definir_contas.html
@@ -48,7 +48,7 @@
                         </div>
 
                         <div class="col-md">
-                            <label>Dia de pagamento</label>
+                            <label>Dia de Pagamento</label>
                             <input name="dia_pagamento" min="1" max="31" type="number" class="form-control">
                         </div>
                     </div>
