--- a/perfil/templates/dashboard.html
+++ b/perfil/templates/dashboard.html
@@ -40,7 +40,7 @@
         const ctx = document.getElementById('myChart');
 
         new Chart(ctx, {
-            type: 'bar',
+            type: 'line',
             data: {
             labels: {{labels|safe}},
             datasets: [{
