--- a/perfil/templates/home.html
+++ b/perfil/templates/home.html
@@ -15,11 +15,11 @@
         <br>
         <div class="row">
             <div class="col-md-3">
-                <a style="text-decoration: none; color:white;" href="#">
+                <a style="text-decoration: none; color:white;" href="{% url 'novo_valor' %}">
                     <div class="card">
                         <div class="row">
                             <div class="col-md-8">
-                                <span  class="fonte-destaque">R$ 1.000,00</span>
+                                <span  class="fonte-destaque">R$ {{total_entradas}}</span>
                             </div>
                             <div class="col-md">
                                 <img class="icone-setas" src="{% static 'perfil/img/entradas.png' %}">
@@ -30,11 +30,11 @@
                 </a>
             </div>
             <div class="col-md-3">
-                <a style="text-decoration: none; color:white;" href="#">
+                <a style="text-decoration: none; color:white;" href="{% url 'novo_valor' %}">
                     <div class="card">
                         <div class="row">
                             <div class="col-md-8">
-                                <span  class="fonte-destaque">R$ 1.000,00</span>
+                                <span  class="fonte-destaque">R$ {{total_saidas}}</span>
                             </div>
                             <div class="col-md">
                                 <img class="icone-setas" src="{% static 'perfil/img/saidas.png' %}">
@@ -83,14 +83,14 @@
                             <div class="saldo">
                                 <span class="fonte-destaque">Saldo mensal</span>
                                 <br>
-                                <span class="font-light">R$ 0.000,00</span>
+                                <span class="font-light">R$ {{total_conta}}</span>
                             </div>
                         </div>
                         <div class="col-md">
                             <div class="despesa">
                                 <span class="fonte-destaque">Despesa mensal</span>
                                 <br>
-                                <span class="font-light">R$ 0.000,00</span>
+                                <span class="font-light">R$ {{total_gastos}}</span>
                             </div>
 
                         </div>
@@ -98,9 +98,9 @@
                     </div>
                     <hr class="hr-borda">
                     <span class="fonte-destaque">Total livre</span>
-                    <span class="font-light negativo">R$ 0.000,00</span>
+                    <span class="font-light negativo">R$ {{livre}}</span>
                     <hr class="hr-borda">
-                    <a href="#" class="botao-principal">Gerenciar dados mensais</a>
+                    <a href="{% url 'gerenciar' %}" class="botao-principal">Gerenciar dados mensais</a>
                 </div>
             </div>
 
@@ -113,7 +113,9 @@
                         <span class="fonte-destaque">Planejamento</span>
                     </div>
                     <hr class="hr-borda">
-                    <a href="{% url 'definir_planejamento' %}" class="botao-principal">Definir planejamento</a>
+                    <a href="{% url 'definir_planejamento' %}" class="botao-principal">Definir Planejamento</a>
+                    <hr>
+                    <a href="{% url 'ver_planejamento' %}" class="botao-principal">Ver Planejamento</a>
                 </div>
             </div>
             <div class="col-md-8">
@@ -123,16 +125,16 @@
 
                     <p>Gastos essenciais</p>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 20%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: {{percentual_gastos_essenciais}}%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <br>
                     <p>Gastos não essenciais</p>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 40%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: {{percentual_gastos_nao_essenciais}}%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
 
                     <hr class="hr-borda">
-                    <a href="#" class="botao-principal">Alterar categorias essenciais</a>
+                    <a href="{% url 'gerenciar' %}" class="botao-principal">Alterar categorias essenciais</a>
 
                 </div>
             </div>
@@ -148,14 +150,16 @@
                     <hr class="hr-borda">
 
                     <span class="fonte-destaque">Próximas do vencimento</span>
-                    <span class="fonte-light">3 contas próximas do vencimento</span>
+                    <span class="fonte-light">{{contagem_proximas}} contas próximas do vencimento</span>
                     <br>
                     <span class="fonte-destaque negativo">Vencidas</span>
-                    <span class="fonte-light">0 contas vencidas</span>
+                    <span class="fonte-light">{{contagem_contas_vencidas}} contas vencidas</span>
 
                     <hr class="hr-borda">
                     
-                    <a href="#" class="botao-principal">Ver mais</a>
+                    <a href="{% url 'definir_contas' %}" class="botao-principal">Cadastrar Contas</a>
+                    <hr>
+                    <a href="{% url 'ver_contas' %}" class="botao-principal">Ver Contas</a>
 
                 </div>
             </div>
